tests/error/label_defined.gw
// [contains] already defined
 test:
test:
;
